# movactl

./: CMakeLists.txt  INSTALL  LICENCE  Makefile  USAGE  api.h  api_backend.c  api_frontend.c  api_serverside.c  api_serverside.cc  api_serverside.h  api_serverside_command.gperf  backend.c  backend.cc  backend.h  backend_command.gperf  backend_private.hh  backend_type.gperf  base64.c  base64.h  bos.cc  bos.hh  cli.c  cli.h  cli_notify.c  command.c  command.h  complete.c  complete.h  daemon.c  daemon.cc  event_unhandled_exception.hh  launchd.c  launchd.h  lge_command.h  lge_keys.h  lge_notify.h  lge_precommand.c  lge_prenotify.c  lge_status.c  (+44 more)
